<resources>
    <string name="app_name">tryOnlySports</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_sports">Sports</string>
    <string name="title_weather">Weather</string>
    <string name="please_choose_the_workout_type">Please choose the workout type.</string>
    <string name="jogging">Jogging</string>
    <string name="walking">Walking</string>
    <string name="string_walking">Walking</string>
    <string name="cycling">Cycling</string>
    <string name="start">Start!</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="no_location_text">No current location</string>
    <string name="launch_activity">Launch activity</string>
    <string name="start_location_updates_button_text">Start receiving location updates</string>
    <string name="stop_location_updates_button_text">Stop receiving location updates</string>
    <string name="preference_file_key">com.example.onlySuggestion.PREFERENCE_FILE_KEY</string>\
    <string name="permission_rationale">Location permission needed for core functionality</string>
    <string name="permission_denied_explanation">Permission was denied, but is needed for core functionality.</string>
    <string name="settings">Settings</string>
    <string name="ok">OK</string>
    <string name="sun_protection">Sun Protection</string>
    <string name="outdoor_activity">Outdoor Activity</string>
    <string name="activity_duration">Activity Duration</string>
    <string name="heat_warning">Heat Warning</string>
    <string name="buttion_start">Start</string>
    <string name="temperature">%s°C</string>
    <string name="uvi">UV Index: %s</string>
    <string name="pm">PM2.5: %s</string>
    <string name="congratulations">Congratulations!</string>
    <string name="description_field">  Enter a description:</string>
    <string name="location">  Enter the location:</string>
    <string name="select_date_button">Select a date:</string>
    <string name="select_time_button">Select a time:</string>
    <string name="indoor_text">Outdoor activity</string>
    <string name="start_time_text">Start time</string>
    <string name="save_activity">Save</string>
    <string name="cancel_button">Cancel</string>
    <string name="end_time_text">End time</string>
    <string name="add_activity">Add a New Activity</string>
    <string name="delete_alert">Confirm to delete the activity?</string>
    <string name="confirm">Confirm</string>
    <string name="title_schedule">Schedule</string>
    <string name="title_facility">Facility</string>
    <string name="workout_history">Workout History</string>
    <string name="health_history">Health History</string>
    <string name="schedule_history">Schedule History</string>
    <string name="profile">Profile</string>
    <string name="weight_history">Weight History</string>
</resources>